--- a/src/Module4/Module4.csproj
+++ b/src/Module4/Module4.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="CSharpFunctionalExtensions" Version="2.7.1" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="Moq" Version="4.14.5" />
   </ItemGroup>
 
 </Project>
